src/objects/Apttus_Approval__ApprovalsSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Approvals System properties</description>
    <fields>
        <fullName>APTS_Comments_Mandatory_On_Rejection__c</fullName>
        <description>Field to display message about mandatory comments when approval is rejected.</description>
        <label>Comments Mandatory On Rejection Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AdminUser__c</fullName>
        <description>The admin user name (format = first name, last name)</description>
        <inlineHelpText>The admin user is the default owner of activities created by a user who is not allowed to be the owner (for e.g. customer portal user).</inlineHelpText>
        <label>Admin User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalTaskPrefix__c</fullName>
        <description>The prefix for the approval history subject.</description>
        <label>Approval Task Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BackupAdminProfile__c</fullName>
        <description>The backup admin profile name</description>
        <label>Backup Admin Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BackupAdminUser__c</fullName>
        <description>The backup admin user name</description>
        <label>Backup Admin User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BackupFilterPage__c</fullName>
        <description>The custom page to filter and select a backup user</description>
        <label>Backup Filter Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BypassSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether apex code can bypass record sharing</description>
        <inlineHelpText>Indicates whether apex code can bypass record sharing</inlineHelpText>
        <label>Bypass Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EmailApprovalServiceAddress__c</fullName>
        <description>The email service address that can receive messages for processing.</description>
        <label>Email Approval Service Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EmailSenderDisplayName__c</fullName>
        <description>Indicates the datasource for the email sender display name. If not set, defaults to the name of the requester for agreements and defaults to the name of the submitter for all others. 

Valid values are : 
============= 
Approver 
Requester 
Submitter</description>
        <inlineHelpText>Indicates the datasource for the email sender display name. If not set, defaults to the name of the requester for agreements and defaults to the name of the submitter for all others.

Valid values are : 
============= 
Approver 
Requester 
Submitter</inlineHelpText>
        <label>Email Sender Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EnableApprovalRequestAutoEscalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this field to true to have approval requests currently assigned or reassigned automatically escalated to another user or queue if no actions have been taken after a specified time.</description>
        <inlineHelpText>Set this field to true to have approval requests currently assigned or reassigned automatically escalated to another user or queue if no actions have been taken after a specified time.</inlineHelpText>
        <label>Enable Approval Request Auto-Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EnableEmailApprovalResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling email approval response lets users reply to email approval requests by typing APPROVE or REJECT in the first line and adding comments in the second line.</description>
        <inlineHelpText>Enabling email approval response lets users reply to email approval requests by typing APPROVE or REJECT in the first line and adding comments in the second line.</inlineHelpText>
        <label>Enable Email Approval Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__InstanceUrl__c</fullName>
        <description>The Salesforce instance url for redirecting to custom pages</description>
        <label>Instance Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ReassignFilterPage__c</fullName>
        <description>The custom page to filter and select a reassign user</description>
        <label>Reassign Filter Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ReassignMyApprovalsFilterPage__c</fullName>
        <description>The custom page to filter and select a reassign user from the MyApprovals view</description>
        <label>Reassign My Approvals Filter Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__UIAssigneeSearchPageSize__c</fullName>
        <description>Specify a value here to denote the number of search results rows to display when searching for assignee queues, roles, rules, or users in admin setup. The default is 20 rows.</description>
        <inlineHelpText>Specify a value here to denote the number of search results rows to display when searching for assignee queues, roles, rules, or users in admin setup. The default is 20 rows.</inlineHelpText>
        <label>UI Assignee Search Page Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__UICustomAssigneeObjectTypes__c</fullName>
        <description>The field specifies a comma separated list of API names of Standard or Custom objects you want to use to when defining custom assignee expressions</description>
        <inlineHelpText>The field specifies a comma separated list of API names of Standard or Custom objects you want to use to when defining custom assignee expressions</inlineHelpText>
        <label>UI Custom Assignee Object Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__CartApprovalContextType__c</fullName>
        <description>Enter the default cart approval context type. 

Valid values are : 
============= 
header 
cart</description>
        <inlineHelpText>Enter the default cart approval context type. 

Valid values are : 
============= 
header 
cart</inlineHelpText>
        <label>Cart Approval Context Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__CartApprovalPreviewPage__c</fullName>
        <description>The name of a custom page used to show preview information. Leave it blank to use the default page.</description>
        <inlineHelpText>The name of a custom page used to show preview information. Leave it blank to use the default page.</inlineHelpText>
        <label>Cart Approval Preview Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__EnableApprovalCheckOnQuoteUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether approval check should performed automatically when a quote updated</description>
        <inlineHelpText>Indicates whether approval check should performed automatically when a quote updated</inlineHelpText>
        <label>Enable Approval Check On Quote Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Approvals System Properties</label>
</CustomObject>